--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "wsb",
   "version": "1.0.0",
+  "type": "module",
   "description": "/r/wallstreetbets trading bot for the lulz",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "dotenv": "^16.0.2",
+    "node-fetch": "^3.2.10",
+    "sentiment": "^5.0.2",
+    "snoostorm": "^1.5.2",
+    "snoowrap": "^1.23.0"
+  }
 }
